--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                             <hr>
                         </legend>
                         <label for="year ">Year of birth</label>
-                        <input type="number" id="year" name="year" min="1800" max="2022" required placeholder="Format: 1928">
+                        <input type="number" id="year" name="year" min="1800" max="2022" required placeholder="1800">
 
                         <label for="month ">Month</label>
-                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="Format: December=12, May=5">
+                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="January=1">
 
                         <label for="date ">Date</label>
-                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="Format: 21 ">
+                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="21">
 
                         <p>Select your gender: <br></p>
                         <div class="radio">
