--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <input type="number" id="year" name="year" min="1800" max="2022" required placeholder="1800">
 
                         <label for="month ">Month</label>
-                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="January=1">
+                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="12">
 
                         <label for="date ">Date</label>
-                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="21">
+                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="01">
 
                         <p>Select your gender: <br></p>
                         <div class="radio">
