--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Akan Name Generator</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-   ?<script src="js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 </head>
 
@@ -17,7 +17,7 @@
             <img src="images/Adinkra-Symbols.png" alt="Adinkra-Symbols">
             <br>
             <h3>Akan Name Generator</h3>
-            <div class="About">
+            <div class="info">
                 <p>Akan names come from a traditional naming system for people from countries such as Togo, Ivory Coast and Ghana. 
                     <br>A child's name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender.
                 </p>
@@ -29,13 +29,13 @@
                             <hr>
                         </legend>
                         <label for="year ">Year of birth</label>
-                        <input type="number" id="year" name="year" min="1800" max="2022" required placeholder="1800">
+                        <input type="number" id="year" name="year" min="1800" max="2022" required placeholder="Format : 2021">
 
                         <label for="month ">Month</label>
-                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="12">
+                        <input type="number" id="month" name="month" min="1" max="12" required placeholder="Format : January = 1">
 
                         <label for="date ">Date</label>
-                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="01">
+                        <input type="number" id="date" name="date" min="1" max="31" required placeholder="Format: 01">
 
                         <p>Select your gender: <br></p>
                         <div class="radio">
