--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/Adinkra-Symbols.png" alt="Adinkra-Symbols">
+            <img src="images/Symbols.png" alt="Adinkra-Symbols">
             <br>
             <h3>Akan Name Generator</h3>
             <div class="info">
