--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h3>Akan Name Generator</h3>
             <div class="info">
                 <p>Akan names come from a traditional naming system for people from countries such as Togo, Ivory Coast and Ghana. 
-                    <br>A child's name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender.
+                    <br>
+                    A child's name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender.
                 </p>
             </div>
         </div>
