--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/images.jpg" alt="Adinkra-Ghana">
+            <img src="images/symbols.png" alt="Adinkra-Ghana">
             <br>
             <h3>Akan Name Generator</h3>
             <div class="info">
